updated chunk logic

--- a/SharpGL1/SharpGL Raytracer.csproj
+++ b/SharpGL1/SharpGL Raytracer.csproj
@@ -87,7 +87,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChunkHashTable.cs" />
-    <Compile Include="SharpGLForm.cs" />
+    <Compile Include="SharpGLForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="SharpGLForm.Designer.cs">
       <DependentUpon>SharpGLForm.cs</DependentUpon>
     </Compile>
@@ -139,13 +141,6 @@
     <Folder Include="Dependencies\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\OpenCL.Net.2.2.9.0\build\net40\OpenCL.Net.targets" Condition="Exists('..\packages\OpenCL.Net.2.2.9.0\build\net40\OpenCL.Net.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\OpenCL.Net.2.2.9.0\build\net40\OpenCL.Net.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\OpenCL.Net.2.2.9.0\build\net40\OpenCL.Net.targets'))" />
-  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
